Start working on backbone table

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -259,3 +259,15 @@ Best thesis ever:
 	title = {{Recent Advances in Object Detection in the Age of Deep Convolutional Neural Networks}},
 	year = {2018},
 }
+@article{backbones,
+	doi = {10.1007/978-3-030-51935-3_30},
+	isbn = {9783030519353},
+	journal = {Image and Signal Processing. ICISP 2020. Lecture Notes in Computer Science},
+	keywords = {Convolutional neural networks,Object detection,Review},
+	month = {6},
+	pages = {282-289},
+	publisher = {Springer, Cham},
+	title = {{Convolutional Neural Networks Backbones for Object Detection}},
+	volume = {12119},
+	year = {2020},
+}
