Continue section on backbones and detectors

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -271,3 +271,73 @@ Best thesis ever:
 	volume = {12119},
 	year = {2020},
 }
+@inproceedings{detectorHyperNet,
+	author = {Kong, Tao and Yao, Anbang and Chen, Yurong and Sun, Fuchun},
+	title = {HyperNet: Towards accurate region proposal generation and joint object detection},
+	pages = {845-853},
+	doi = {10.1109/CVPR.2016.98},
+	crossref = {CVPR2016},
+}
+@inproceedings{backboneResNet,
+	author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	title = {{Deep Residual Learning for Image Recognition}}, 
+	pages = {770-778},
+	doi={10.1109/CVPR.2016.90},
+	crossref = {CVPR2016},
+}
+@inproceedings{detectorYOLOv1,
+	author = {Joseph Redmon and Santosh Divvala and Ross Girshick and Ali Farhadi},
+	title = {{You Only Look Once: Unified, Real-Time Object Detection}},
+	pages = {779-788},
+	doi={10.1109/CVPR.2016.91},
+	crossref = {CVPR2016},
+}
+@proceedings{CVPR2016,
+	booktitle = {2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+	title = {2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+	publisher = {IEEE Computer Society},
+	venue = {Las Vegas, NV, USA},
+	month = {12},
+	year = {2016},
+	isbn = {978-1-4673-8851-1},
+}
+@inproceedings{backboneGoogLeNet,
+	author = {Szegedy, Christian and Wei Liu and Yangqing Jia and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+	title = {Going deeper with convolutions}, 
+	pages = {1-9},
+	doi = {10.1109/CVPR.2015.7298594},
+	crossref = {CVPR2015},
+}
+@proceedings{CVPR2015,
+	booktitle = {2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+	title = {2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)}, 
+	publisher = {IEEE Computer Society},
+	venue = {Boston, MA, USA},
+	month = {6},
+	year = {2015},
+	isbn = {978-1-4673-6964-0},
+}
+@article{backboneAlexNet,
+	title = {Imagenet classification with deep convolutional neural networks},
+	author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+	journal = {Advances in neural information processing systems},
+	volume = {25},
+	pages = {1097--1105},
+	year = {2012},
+}
+@inproceedings{12stageSYNASC2018,
+	author = {Petru Soviany and Radu Tudor Ionescu},
+	title = {{Optimizing the Trade-off between Single-Stage and Two-Stage Object Detectors using Image Difficulty Prediction}},
+	pages = {209-214},
+	url = {https://arxiv.org/abs/1803.08707v3},
+	crossref = {SYNASC2018},
+}
+@proceedings{SYNASC2018,
+	title = {20th International Symposium on Symbolic and Numeric Algorithms for Scientific Computing},
+	booktitle = {20th International Symposium on Symbolic and Numeric Algorithms for Scientific Computing},
+	publisher = {Institute of Electrical and Electronics Engineers Inc.},
+	venue = {Timișoara, Romania}.
+	month = {9},
+	year = {2018},
+	isbn = {},
+}
