Add descriptions in detectors section

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -341,3 +341,83 @@ Best thesis ever:
 	year = {2018},
 	isbn = {},
 }
+@article{detectorYOLOv4,
+	author = {Alexey Bochkovskiy and Chien-Yao Wang and Hong-Yuan Mark Liao},
+	month = {4},
+	title = {{YOLOv4: Optimal Speed and Accuracy of Object Detection}},
+	url = {https://arxiv.org/abs/2004.10934v1},
+	year = {2020},
+}
+@inproceedings{surveyICBDT2019,
+	author = {Wang Hechun and Zheng Xiaohong},
+	title = {{A Survey of Deep Learning-Based Object Detection}},
+	pages = {149-153},
+	doi = {10.1145/3358528.3358574},
+	crossref = {ICBDT2019},
+}
+@proceedings{ICBDT2019,
+	title = {2nd International Conference on Big Data Technologies},
+	booktitle = {2nd International Conference on Big Data Technologies},
+	publisher = {Association for Computing Machinery},
+	venue = {Jinan, China},
+	month = {8},
+	year = {2019},
+}
+@inproceedings{backboneVGG,
+	author = {Karen Simonyan and Andrew Zisserman},
+	title = {{Very Deep Convolutional Networks for Large-Scale Image Recognition}},
+	url = {https://arxiv.org/abs/1409.1556v6},
+	crossref = {ICLR2015},
+}
+@proceedings{ICLR2015,
+	title = {3rd International Conference on Learning Representations},
+	booktitle = {3rd International Conference on Learning Representations},
+	publisher = {ICLR},
+	venue = {San Diego, CA, USA},
+	month = {9},
+	year = {2014},
+}
+@inproceedings{detectorBlitzNet,
+	author = {Nikita Dvornik and Konstantin Shmelkov and Julien Mairal and Cordelia Schmid},
+	title = {{BlitzNet: A Real-Time Deep Network for Scene Understanding}},
+	pages = {4174-4182},
+	url = {https://arxiv.org/abs/1708.02813v1},
+	crossref = {ICCV2017},
+}
+@inproceedings{detectorRetinaNet,
+	author = {Tsung Yi Lin and Priya Goyal and Ross Girshick and Kaiming He and Piotr Dollar},
+	title = {Focal Loss for Dense Object Detection},
+	pages = {2999-3007},
+	doi = {10.1109/ICCV.2017.324},
+	url = {http://arxiv.org/abs/1708.02002},
+	crossref = {ICCV2017},
+}
+@inproceedings{detectorCoupleNet,
+	author = {Yousong Zhu and Chaoyang Zhao and Jinqiao Wang and Xu Zhao and Yi Wu and Hanqing Lu},
+	title = {{CoupleNet: Coupling Global Structure with Local Parts for Object Detection}},
+	pages = {4146-4154},
+	doi = {10.1109/ICCV.2017.444},
+	url = {https://doi.org/10.1109/ICCV.2017.444},
+	crossref = {ICCV2017}
+}
+@proceedings{ICCV2017,
+	title = {Proceedings of the IEEE International Conference on Computer Vision},
+	booktitle = {Proceedings of the IEEE International Conference on Computer Vision},
+	publisher = {Institute of Electrical and Electronics Engineers Inc.},
+	volume = {2017-October},
+	venue = {Venice, Italy},
+	month = {10},
+	year = {2017},
+}
+@article{detectorSSD,
+	author = {Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy, Christian and Reed, Scott and Fu, Cheng-Yang and Berg, Alexander C.},
+	title = {SSD: Single Shot MultiBox Detector},
+	doi = {10.1007/978-3-319-46448-0_2},
+	journal = {Lecture Notes in Computer Science},
+	pages = {21-37},
+	publisher = {Springer Verlag},
+	url = {ttp://dx.doi.org/10.1007/978-3-319-46448-0_2},
+	year = {2016},
+	ISBN = {9783319464480},
+	ISSN = {1611-3349},
+}
